fix: tests/build failing on Java 8